# iot-esp32

./: .gitmodules  Doxyfile  README.md  partitions.csv  project.cmake  sdkconfig
examples/ble_smartthings_presence/: CMakeLists.txt  iot-config.h
examples/ble_smartthings_presence/main/: CMakeLists.txt  ble_smartthings_presence.cpp
iot-app/: CMakeLists.txt  app.cpp
iot-app-stdk/: CMakeLists.txt  stdk_app.cpp
iot-app-stdk/include/: stdk_app.h
iot-app/include/: app.h
iot-base/: CMakeLists.txt  app.cpp  ble.cpp  network.cpp  sensor.cpp  smartthings.cpp
iot-base/include/: app.h  ble.h  network.h  sensor.h  smartthings.h
iot-common/: CMakeLists.txt  iot-ota.cpp  iot_common.cpp
iot-common/include/: iot-common.h  iot-ota.h
iot-core/: CMakeLists.txt  ble.cpp  devices.cpp  influx.cpp  network.cpp  sensor.cpp  smartapp.cpp  smartthings.cpp
iot-core/include/: ble.h  devices.h  influx.h  network.h  public-ca.h  sensor.h  smartapp.h  smartthings.h
iot-edge/smartapp-discovery/: config.yml
iot-edge/smartapp-discovery/src/: config.lua  discovery.lua  init.lua  mdns.lua  server.lua
iot-stdk/: CMakeLists.txt  Kconfig
